--- a/app/src/main/res/layout-land/simple_calc_buttons.xml
+++ b/app/src/main/res/layout-land/simple_calc_buttons.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/GridLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="5">
+    >
 
     <!-- 1st row -->
 
     <Button
         android:id="@+id/bksp"
         style="@style/CalcFunctionButtons"
-        android:layout_row="0"
-        android:layout_rowWeight="1"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
+        app:layout_row="0"
+        app:layout_rowWeight="1"
+        app:layout_column="0"
+        app:layout_columnWeight="1"
         android:onClick="bskpClicked"
         android:text="Bksp" />
 
     <Button
         android:id="@+id/buttonc"
         style="@style/CalcFunctionButtons"
-        android:layout_row="1"
-        android:layout_rowWeight="1"
-        android:layout_column="0"
-        android:layout_rowSpan="2"
-        android:layout_columnWeight="1"
+        app:layout_row="1"
+        app:layout_rowWeight="1"
+        app:layout_column="0"
+        app:layout_rowSpan="2"
+        app:layout_columnWeight="1"
         android:onClick="doubleClick"
         android:tag="c"
         android:text="C" />
@@ -34,11 +34,11 @@
     <Button
         android:id="@+id/plusmin"
         style="@style/CalcFunctionButtons"
-        android:layout_row="3"
-        android:layout_rowWeight="1"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
-        android:layout_gravity="fill_vertical"
+        app:layout_row="3"
+        app:layout_rowWeight="1"
+        app:layout_column="0"
+        app:layout_columnWeight="1"
+        app:layout_gravity="fill_vertical"
         android:onClick="plusMinusClicked"
         android:text="±" />
 
@@ -47,10 +47,10 @@
     <Button
         android:id="@+id/button7"
         style="@style/CalcNumberButtons"
-        android:layout_row="0"
-        android:layout_rowWeight="1"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
+        app:layout_row="0"
+        app:layout_rowWeight="1"
+        app:layout_column="1"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="7"
         android:text="7" />
@@ -58,10 +58,10 @@
     <Button
         android:id="@+id/button8"
         style="@style/CalcNumberButtons"
-        android:layout_row="0"
-        android:layout_rowWeight="1"
-        android:layout_column="2"
-        android:layout_columnWeight="1"
+        app:layout_row="0"
+        app:layout_rowWeight="1"
+        app:layout_column="2"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="8"
         android:text="8" />
@@ -69,10 +69,10 @@
     <Button
         android:id="@+id/button9"
         style="@style/CalcNumberButtons"
-        android:layout_row="0"
-        android:layout_rowWeight="1"
-        android:layout_column="3"
-        android:layout_columnWeight="1"
+        app:layout_row="0"
+        app:layout_rowWeight="1"
+        app:layout_column="3"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="9"
         android:text="9" />
@@ -80,10 +80,10 @@
     <Button
         android:id="@+id/slash"
         style="@style/CalcFunctionButtons"
-        android:layout_row="1"
-        android:layout_rowWeight="1"
-        android:layout_column="4"
-        android:layout_columnWeight="1"
+        app:layout_row="1"
+        app:layout_rowWeight="1"
+        app:layout_column="4"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="/"
         android:text="/" />
@@ -93,10 +93,10 @@
     <Button
         android:id="@+id/button4"
         style="@style/CalcNumberButtons"
-        android:layout_row="1"
-        android:layout_rowWeight="1"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
+        app:layout_row="1"
+        app:layout_rowWeight="1"
+        app:layout_column="1"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="4"
         android:text="4" />
@@ -104,10 +104,10 @@
     <Button
         android:id="@+id/button5"
         style="@style/CalcNumberButtons"
-        android:layout_row="1"
-        android:layout_rowWeight="1"
-        android:layout_column="2"
-        android:layout_columnWeight="1"
+        app:layout_row="1"
+        app:layout_rowWeight="1"
+        app:layout_column="2"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="5"
         android:text="5" />
@@ -116,10 +116,10 @@
         android:id="@+id/button6"
         style="@style/CalcNumberButtons"
         android:layout_height="wrap_content"
-        android:layout_row="1"
-        android:layout_rowWeight="1"
-        android:layout_column="3"
-        android:layout_columnWeight="1"
+        app:layout_row="1"
+        app:layout_rowWeight="1"
+        app:layout_column="3"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="6"
         android:text="6" />
@@ -127,10 +127,10 @@
     <Button
         android:id="@+id/multiply"
         style="@style/CalcFunctionButtons"
-        android:layout_row="0"
-        android:layout_rowWeight="1"
-        android:layout_column="4"
-        android:layout_columnWeight="1"
+        app:layout_row="0"
+        app:layout_rowWeight="1"
+        app:layout_column="4"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="*"
         android:text="*" />
@@ -140,10 +140,10 @@
     <Button
         android:id="@+id/button1"
         style="@style/CalcNumberButtons"
-        android:layout_row="2"
-        android:layout_rowWeight="1"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
+        app:layout_row="2"
+        app:layout_rowWeight="1"
+        app:layout_column="1"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="1"
         android:text="1" />
@@ -151,10 +151,10 @@
     <Button
         android:id="@+id/button2"
         style="@style/CalcNumberButtons"
-        android:layout_row="2"
-        android:layout_rowWeight="1"
-        android:layout_column="2"
-        android:layout_columnWeight="1"
+        app:layout_row="2"
+        app:layout_rowWeight="1"
+        app:layout_column="2"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="2"
         android:text="2" />
@@ -163,10 +163,10 @@
         android:id="@+id/button3"
         style="@style/CalcNumberButtons"
         android:layout_height="wrap_content"
-        android:layout_row="2"
-        android:layout_rowWeight="1"
-        android:layout_column="3"
-        android:layout_columnWeight="1"
+        app:layout_row="2"
+        app:layout_rowWeight="1"
+        app:layout_column="3"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="3"
         android:text="3" />
@@ -174,10 +174,10 @@
     <Button
         android:id="@+id/minus"
         style="@style/CalcFunctionButtons"
-        android:layout_row="2"
-        android:layout_rowWeight="1"
-        android:layout_column="4"
-        android:layout_columnWeight="1"
+        app:layout_row="2"
+        app:layout_rowWeight="1"
+        app:layout_column="4"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="-"
         android:text="-" />
@@ -187,10 +187,10 @@
     <Button
         android:id="@+id/button0"
         style="@style/CalcNumberButtons"
-        android:layout_row="3"
-        android:layout_rowWeight="1"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
+        app:layout_row="3"
+        app:layout_rowWeight="1"
+        app:layout_column="1"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="0"
         android:text="0" />
@@ -198,10 +198,10 @@
     <Button
         android:id="@+id/dot"
         style="@style/CalcFunctionButtons"
-        android:layout_row="3"
-        android:layout_rowWeight="1"
-        android:layout_column="2"
-        android:layout_columnWeight="1"
+        app:layout_row="3"
+        app:layout_rowWeight="1"
+        app:layout_column="2"
+        app:layout_columnWeight="1"
         android:onClick="dotClicked"
         android:text="." />
 
@@ -209,10 +209,10 @@
         android:id="@+id/equals"
         style="@style/CalcEqualButton"
         android:layout_height="wrap_content"
-        android:layout_row="3"
-        android:layout_rowWeight="1"
-        android:layout_column="3"
-        android:layout_columnWeight="1"
+        app:layout_row="3"
+        app:layout_rowWeight="1"
+        app:layout_column="3"
+        app:layout_columnWeight="1"
         android:onClick="equalsClicked"
         android:text="="
         android:textColor="@color/colorFunctionalButton" />
@@ -220,10 +220,10 @@
     <Button
         android:id="@+id/plus"
         style="@style/CalcFunctionButtons"
-        android:layout_row="3"
-        android:layout_rowWeight="1"
-        android:layout_column="4"
-        android:layout_columnWeight="1"
+        app:layout_row="3"
+        app:layout_rowWeight="1"
+        app:layout_column="4"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="+"
         android:text="+" />
@@ -231,4 +231,4 @@
 
 
 
-</GridLayout>
+</android.support.v7.widget.GridLayout>
