--- a/app/src/main/res/layout/simple_calc_buttons.xml
+++ b/app/src/main/res/layout/simple_calc_buttons.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/GridLayout"
     android:layout_width="match_parent"
@@ -10,35 +10,35 @@
 
     <Button
         android:id="@+id/bksp"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         style="@style/CalcFunctionButtons"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
+        app:layout_row="0"
+        app:layout_column="0"
+        app:layout_columnWeight="1"
         android:onClick="bskpClicked"
         android:text="Bksp" />
 
     <Button
         android:id="@+id/buttonc"
         style="@style/CalcFunctionButtons"
-        android:layout_row="0"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        android:layout_columnWeight="1"
+        app:layout_row="0"
+        app:layout_column="1"
+        app:layout_columnSpan="2"
+        app:layout_columnWeight="1"
         android:onClick="doubleClick"
         android:tag="c"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:text="C" />
 
 
     <Button
         android:id="@+id/plusmin"
         style="@style/CalcFunctionButtons"
-        android:layout_gravity="fill_vertical"
-        android:layout_row="0"
-        android:layout_column="3"
-        android:layout_columnWeight="1"
-        android:layout_rowWeight="1"
+        app:layout_gravity="fill_vertical"
+        app:layout_row="0"
+        app:layout_column="3"
+        app:layout_columnWeight="1"
+        app:layout_rowWeight="1"
         android:onClick="plusMinusClicked"
         android:text="±" />
 
@@ -47,10 +47,10 @@
     <Button
         android:id="@+id/button7"
         style="@style/CalcNumberButtons"
-        android:layout_row="1"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
-        android:layout_rowWeight="1"
+        app:layout_row="1"
+        app:layout_column="0"
+        app:layout_columnWeight="1"
+        app:layout_rowWeight="1"
         android:onClick="pressButton"
         android:tag="7"
         android:text="7" />
@@ -58,32 +58,32 @@
     <Button
         android:id="@+id/button8"
         style="@style/CalcNumberButtons"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
+        app:layout_row="1"
+        app:layout_column="1"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:tag="8"
         android:text="8" />
 
     <Button
         android:id="@+id/button9"
         style="@style/CalcNumberButtons"
-        android:layout_row="1"
-        android:layout_column="2"
-        android:layout_columnWeight="1"
+        app:layout_row="1"
+        app:layout_column="2"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:tag="9"
         android:text="9" />
 
     <Button
         android:id="@+id/slash"
         style="@style/CalcFunctionButtons"
-        android:layout_rowWeight="1"
-        android:layout_row="1"
-        android:layout_column="3"
-        android:layout_columnWeight="1"
+        app:layout_rowWeight="1"
+        app:layout_row="1"
+        app:layout_column="3"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="/"
         android:text="/" />
@@ -92,11 +92,11 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         style="@style/CalcNumberButtons"
-        android:layout_row="2"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
+        app:layout_row="2"
+        app:layout_column="0"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="4"
         android:text="4" />
@@ -104,11 +104,11 @@
     <Button
         android:id="@+id/button5"
         style="@style/CalcNumberButtons"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
+        app:layout_row="2"
+        app:layout_column="1"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:tag="5"
         android:text="5" />
 
@@ -116,22 +116,22 @@
         android:id="@+id/button6"
         style="@style/CalcNumberButtons"
         android:layout_height="wrap_content"
-        android:layout_row="2"
-        android:layout_column="2"
-        android:layout_columnWeight="1"
+        app:layout_row="2"
+        app:layout_column="2"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:tag="6"
         android:text="6" />
 
     <Button
         android:id="@+id/multiply"
         style="@style/CalcFunctionButtons"
-        android:layout_row="2"
-        android:layout_column="3"
-        android:layout_columnWeight="1"
+        app:layout_row="2"
+        app:layout_column="3"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:tag="*"
         android:text="*"
         />
@@ -141,10 +141,10 @@
     <Button
         android:id="@+id/button1"
         style="@style/CalcNumberButtons"
-        android:layout_rowWeight="1"
-        android:layout_row="3"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
+        app:layout_rowWeight="1"
+        app:layout_row="3"
+        app:layout_column="0"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="1"
         android:text="1" />
@@ -152,11 +152,11 @@
     <Button
         android:id="@+id/button2"
         style="@style/CalcNumberButtons"
-        android:layout_row="3"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
+        app:layout_row="3"
+        app:layout_column="1"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:tag="2"
         android:text="2" />
 
@@ -164,22 +164,22 @@
         android:id="@+id/button3"
         style="@style/CalcNumberButtons"
         android:layout_height="wrap_content"
-        android:layout_row="3"
-        android:layout_column="2"
-        android:layout_columnWeight="1"
+        app:layout_row="3"
+        app:layout_column="2"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:tag="3"
         android:text="3" />
 
     <Button
         android:id="@+id/minus"
         style="@style/CalcFunctionButtons"
-        android:layout_row="3"
-        android:layout_column="3"
-        android:layout_columnWeight="1"
+        app:layout_row="3"
+        app:layout_column="3"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:tag="-"
         android:text="-" />
 
@@ -188,10 +188,10 @@
     <Button
         android:id="@+id/button0"
         style="@style/CalcNumberButtons"
-        android:layout_rowWeight="1"
-        android:layout_row="4"
-        android:layout_column="0"
-        android:layout_columnWeight="1"
+        app:layout_rowWeight="1"
+        app:layout_row="4"
+        app:layout_column="0"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="0"
         android:text="0" />
@@ -199,35 +199,35 @@
     <Button
         android:id="@+id/dot"
         style="@style/CalcFunctionButtons"
-        android:layout_row="4"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
+        app:layout_row="4"
+        app:layout_column="1"
+        app:layout_columnWeight="1"
         android:onClick="dotClicked"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:text="." />
 
     <Button
         android:id="@+id/equals"
         style="@style/CalcEqualButton"
         android:layout_height="wrap_content"
-        android:layout_row="4"
-        android:layout_column="2"
-        android:layout_columnWeight="1"
+        app:layout_row="4"
+        app:layout_column="2"
+        app:layout_columnWeight="1"
         android:onClick="equalsClicked"
-        android:layout_rowWeight="1"
+        app:layout_rowWeight="1"
         android:text="="
         android:textColor="@color/colorFunctionalButton" />
 
     <Button
         android:id="@+id/plus"
         style="@style/CalcFunctionButtons"
-        android:layout_row="4"
-        android:layout_column="3"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
+        app:layout_row="4"
+        app:layout_column="3"
+        app:layout_rowWeight="1"
+        app:layout_columnWeight="1"
         android:onClick="pressButton"
         android:tag="+"
         android:text="+" />
 
 
-</GridLayout>
+</android.support.v7.widget.GridLayout>
